[tool.poetry]
name = "rag-stream-system"
version = "1.0.0"
description = "RAG 流式中斷與續寫系統"
authors = ["Jim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openai = ">=1.12.0"
numpy = ">=1.24.0"
python-dotenv = ">=1.0.0"
fastapi = ">=0.104.0"
uvicorn = ">=0.24.0"
pydantic = ">=2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
