[tool.poetry]
name = "rag-stream-system"
version = "1.0.0"
description = "RAG 流式中斷與續寫系統"
authors = ["Jim"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
openai = ">=1.54.0"
numpy = "^1.26.0"
python-dotenv = ">=1.0.0"
fastapi = ">=0.118.02"

uvicorn = {extras = ["standard"], version = ">=0.24.0"}
pydantic = ">=2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
