[tool.poetry]
name = "rag-teaching-system"
version = "2.0.0"
description = "RAG 教學問答系統 - K/C/R 三維度分類 + 12 種情境"
authors = ["Jim"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
openai = ">=1.54.0"
numpy = "^1.26.0"
python-dotenv = ">=1.0.0"
fastapi = ">=0.118.02"

uvicorn = {extras = ["standard"], version = ">=0.24.0"}
pydantic = ">=2.0.0"
sentence-transformers = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
